// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth search results form no results should render correctly with no user and no results 1`] = `
<div>
  <div
    className="sc-VigVT khOylZ"
  >
    <div
      className="sc-jTzLTM bVuegP"
    >
      <form
        onSubmit={[Function]}
      >
        <label
          className="sc-htoDjs gSqRhu"
          htmlFor="user"
        >
          <span
            className="sc-dnqmqq jvzDFl"
          >
            Username or email address
          </span>
          <input
            className="sc-gqjmRU dLAmjx"
            defaultValue=""
            id="user"
            name="user"
            onChange={[Function]}
            type="text"
          />
        </label>
        <button
          className="sc-bZQynM jhblue"
          disabled={false}
          id="search-button"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`Auth search results form some results should render correctly with user and results 1`] = `
<div>
  <div
    className="sc-VigVT khOylZ"
  >
    <div
      className="sc-jTzLTM bVuegP"
    >
      <form
        onSubmit={[Function]}
      >
        <label
          className="sc-htoDjs gSqRhu"
          htmlFor="user"
        >
          <span
            className="sc-dnqmqq jvzDFl"
          >
            Username or email address
          </span>
          <input
            className="sc-gqjmRU dLAmjx"
            defaultValue="someuser"
            id="user"
            name="user"
            onChange={[Function]}
            type="text"
          />
        </label>
        <button
          className="sc-bZQynM jhblue"
          disabled={false}
          id="search-button"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
  </div>
  <table
    className="sc-EHOje ecdksn"
  >
    <tbody
      className="sc-bwzfXH uTxCW"
    >
      <tr
        className="sc-ifAKCX cFlEyZ"
      >
        <th
          className="sc-bxivhb eWDuGm"
        >
          Name
        </th>
        <th
          className="sc-bxivhb eWDuGm"
        >
          Username
        </th>
        <th
          className="sc-bxivhb eWDuGm"
        >
          Email
        </th>
        <th
          className="sc-bxivhb eWDuGm"
        >
          Locked
        </th>
        <th
          className="sc-bxivhb eWDuGm"
        >
          Enabled
        </th>
        <th
          className="sc-bxivhb eWDuGm"
        >
           
        </th>
      </tr>
      <tr
        className="sc-ifAKCX cFlEyZ"
      >
        <td
          className="sc-bxivhb ckLzJk"
        >
          Auth
           
          Adm
        </td>
        <td
          className="sc-bxivhb ckLzJk"
        >
          AUTH_ADM
        </td>
        <td
          className="sc-bxivhb ckLzJk"
        >
          auth_test2@digital.justice.gov.uk
        </td>
        <td
          className="sc-bxivhb ckLzJk"
        >
          Yes
        </td>
        <td
          className="sc-bxivhb ckLzJk"
        >
          No
        </td>
        <td
          className="sc-bxivhb ckLzJk"
        >
          <button
            className="sc-bZQynM jocBRG"
            disabled={false}
            id="edit-button-AUTH_ADM"
            onClick={[Function]}
            value={0}
          >
            Edit
          </button>
        </td>
      </tr>
      <tr
        className="sc-ifAKCX cFlEyZ"
      >
        <td
          className="sc-bxivhb ckLzJk"
        >
          Auth
           
          Expired
        </td>
        <td
          className="sc-bxivhb ckLzJk"
        >
          AUTH_EXPIRED
        </td>
        <td
          className="sc-bxivhb ckLzJk"
        >
          auth_test2@digital.justice.gov.uk
        </td>
        <td
          className="sc-bxivhb ckLzJk"
        >
          No
        </td>
        <td
          className="sc-bxivhb ckLzJk"
        >
          Yes
        </td>
        <td
          className="sc-bxivhb ckLzJk"
        >
          <button
            className="sc-bZQynM jocBRG"
            disabled={false}
            id="edit-button-AUTH_EXPIRED"
            onClick={[Function]}
            value={1}
          >
            Edit
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
